--- a/Views/Books/Delete.cshtml
+++ b/Views/Books/Delete.cshtml
@@ -1,6 +1,7 @@
 @model Books
 
-<form method="post" asp-action="Edit">
+<form method="post" asp-action="Delete">
+    <input asp-for="Id" type="hidden" />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">Delete Books</h2>
@@ -8,12 +9,12 @@
         </div>
         <div class="mb-3">
             <label asp-for="Name">Name</label>
-            <input asp-for="Name" class="form-control" />
+            <input asp-for="Name" disabled class="form-control" />
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="mb-3">
             <label asp-for="DisplayOrder"></label>
-            <input asp-for="DisplayOrder" class="form-control" />
+            <input asp-for="DisplayOrder" disabled class="form-control" />
             <span asp-validation-for="DisplayOrder" class="text-danger"></span>
         </div>
         <button type="submit" class="btn btn-danger" style="width: 150px;">Delete</button>
