--- a/Views/Books/Index.cshtml
+++ b/Views/Books/Index.cshtml
@@ -39,12 +39,12 @@
                 <td>
                     @book.DisplayOrder
                 </td>
-                <td>
-                    <div class="row">
+                <td width="20%">
+                    <div class="w-75 btn-group" role="group">
                         <a asp-controller="Books" asp-action="Edit" asp-route-id="@book.Id" class="btn btn-primary">
                             <i class="bi bi-pencil-square"></i> Edit
                         </a>
-                        <a asp-controller="Books" asp-action="Delele" asp-route-id="@book.Id" class="btn btn-danger">
+                        <a asp-controller="Books" asp-action="Delete" asp-route-id="@book.Id" class="btn btn-danger">
                             <i class="bi bi-x-circle"></i> Delete
                         </a>
                     </div>
