--- a/Views/Books/Index.cshtml
+++ b/Views/Books/Index.cshtml
@@ -13,6 +13,9 @@
             <a asp-controller="Books" asp-action="Create" class="btn btn-primary">
                 <i class="bi bi-plus-square"></i> Create New Books
             </a>
+            <a asp-controller="Books" asp-action="Search" class="btn btn-secondary">
+                Search
+            </a>
         </div>
     </div>
 </div>
