--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - JokeMVCApp</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/bootswatchTheme.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/JokeMVCApp.styles.css" asp-append-version="true" />
@@ -30,10 +31,11 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Books", asp-action="Index">Books</a>
                     </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-sm-2" type="search" placeholder="Search">
+                <form asp-controller="Books" asp-action="SearchQuery" method="get" class="d-flex">
+                    <input name= "query" class="form-control me-sm-2" type="search" placeholder="Search Books" asp-label="Search">
                     <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
                 </form>
+                <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
